[gd_scene load_steps=9 format=2]

[ext_resource path="res://mini_game/mini_game_default/mini_game_default.gd" type="Script" id=1]
[ext_resource path="res://mini_game/mini_game_default/img/bg.png" type="Texture" id=2]
[ext_resource path="res://mini_game/mini_game_default/img/wp3.png" type="Texture" id=4]
[ext_resource path="res://mini_game/mini_game_default/img/wp1.png" type="Texture" id=5]
[ext_resource path="res://mini_game/mini_game_default/img/wp2.png" type="Texture" id=7]
[ext_resource path="res://mini_game/mini_game_default/img/bg_1.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=2]
resource_name = "hole"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("hoe:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ) ]
}

[node name="mini_game_default" type="PopupDialog"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -60.0
margin_right = 130.0
margin_bottom = 60.0
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="ground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
texture = ExtResource( 8 )

[node name="hoe" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
texture = ExtResource( 5 )

[node name="hole_button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -38.0
margin_right = 13.0
margin_bottom = 30.0
rect_clip_content = true
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="hoe_animation_player" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/hole = SubResource( 2 )

[connection signal="about_to_show" from="." to="." method="_on_mini_game_default_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_mini_game_default_popup_hide"]
[connection signal="mouse_entered" from="hole_button" to="." method="_on_hole_button_mouse_entered"]
[connection signal="mouse_exited" from="hole_button" to="." method="_on_hole_button_mouse_exited"]
[connection signal="pressed" from="hole_button" to="." method="_on_hole_button_pressed"]
